[package]
name = "blackbox-tool"
version = "0.1.0"
authors = ["Ilya Epifanov <elijah.epifanov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
description = "Multitool for flight controllers' blackbox logs"
repository = "https://github.com/ilya-epifanov/blackbox-tool"

[dependencies]
fc-blackbox = "0.1"
anyhow = "1"
itertools = "0.10"
clap = "3.0.0-beta.2"
